--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,19 +1,30 @@
-<h2>{{ hero.name | uppercase }} Details</h2>
-<div>
-    <span>ID: </span> {{ hero.id }}
-</div>
-<div>
-    <span>Name: </span> {{ hero.name }}
-</div>
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+    [class.selected]="hero === selectedHero"
+    (click)="onSelectHero(hero);false;">
+      <span class="badge">{{ hero.id }}</span> {{ hero.name }}
+  </li>
+</ul>
 
-<h3>Edit</h3>
-<div>
-  <label for="hero_name">
-    Name
-    <input
-      id="hero_name"
-      type="text"
-      placeholder="Name"
-      [(ngModel)]="hero.name">
-  </label>
+<div *ngIf="selectedHero">
+  <h2>{{ selectedHero.name | uppercase }} Details</h2>
+  <div>
+      <span>ID: </span> {{ selectedHero.id }}
+  </div>
+  <div>
+      <span>Name: </span> {{ selectedHero.name }}
+  </div>
+
+  <h3>Edit</h3>
+  <div>
+    <label for="hero_name">
+      Name
+      <input
+        id="hero_name"
+        type="text"
+        placeholder="Name"
+        [(ngModel)]="selectedHero.name">
+    </label>
+  </div>
 </div>
